--- a/.ci_support/linux_64_c_compiler_version12cuda_compiler_versionNonecxx_compiler_version12python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cuda_compiler_versionNonecxx_compiler_version12python3.8.____cpython.yaml
@@ -49,7 +49,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.8.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -66,6 +66,8 @@ zip_keys:
   - cuda_compiler_version
   - cdt_name
   - docker_image
+- - libgrpc
+  - libprotobuf
 - - python
   - numpy
   - python_impl
