--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,14 +7,14 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
-    # sha256: 624ed1cc170cdcc19e8a15d8cdde989a9a1c6b0534c90b38a6b2f06fb2963e5f
+    sha256: c030cb1905bff1d2446615992aad8d8d85cbe90c4fb625cee458c63bf466bc8e
     patches:
       - patches/0001-loosen-requirements.patch
       - patches/0002-fix-genproto.patch
       - patches/0003-fix-absl-py.patch
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
-    # sha256: 922f9187de79e8e7f7d7a5b2d6d3aabc81bbbd6ba5f12a4f52967dd302214a43
+    sha256: 86c75e830c6ba762d0e3cf04c160096930fb12a992e69b3f24674b9f58902063
     folder: tensorflow-estimator
 
 build:
@@ -227,6 +227,9 @@ outputs:
     #   What is the difference between these two packages?
     #   - tensorflow-io-gcs-filesystem >=0.21.0
     #   - tensorflow-io >=0.21.0
+    test:
+      commands:
+        - exit 0
 
   - name: tensorflow
     build:
