--- a/.ci_support/linux_64_c_compiler_version12cuda_compiler_versionNonecxx_compiler_version12python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cuda_compiler_versionNonecxx_compiler_version12python3.8.____cpython.yaml
@@ -1,25 +1,25 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '12'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cuda_compiler:
-- nvcc
+- None
 cuda_compiler_version:
-- '11.2'
+- None
 cudnn:
-- '8'
+- undefined
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 giflib:
 - '5.2'
 grpc_cpp:
@@ -31,7 +31,7 @@ libabseil:
 libcurl:
 - '8'
 libgrpc:
-- '1.52'
+- '1.54'
 libjpeg_turbo:
 - 2.1.5
 libpng:
