backport patch for wrapt compatibility

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,9 @@ source:
       - patches/0003-fix-absl-py.patch
       - patches/0004-Add-additional-absl_synchronization-linkage-to-gRPC.patch
       - patches/0005-add-missing-macro-for-CUDA_VERSION.patch
+      # backport https://github.com/tensorflow/tensorflow/commit/2eae48506773587a7e74dd7064aa0fa9f0c37fbf
+      # to not have to carry an upper bound for wrapt-version
+      - patches/0006-Add-TypeError-catch-wrapt-1.15.0rc-throws-TypeError-.patch
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 86c75e830c6ba762d0e3cf04c160096930fb12a992e69b3f24674b9f58902063
