--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -211,6 +211,7 @@ outputs:
         - google-pasta >=0.1.1
         - grpcio {{ libgrpc }}.*
         - h5py >=2.9.0
+        - jax >=0.3.15
         - keras-preprocessing >=1.1.1
         - {{ pin_compatible('numpy', lower_bound='1.22') }}
         - opt_einsum >=2.3.2
