--- a/.ci_support/linux_64_c_compiler_version10cuda_compilernvcccuda_compiler_version11.2cudnn8cxx_compiler_version10numpy1.21python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cuda_compilernvcccuda_compiler_version11.2cudnn8cxx_compiler_version10numpy1.21python3.9.____cpython.yaml
@@ -20,6 +20,8 @@ cxx_compiler_version:
 - '10'
 docker_image:
 - quay.io/condaforge/linux-anvil-cuda:11.2
+flatbuffers:
+- 23.5.26
 giflib:
 - '5.2'
 icu:
