--- a/.ci_support/linux_64_c_compiler_version12cuda_compilerNonecuda_compiler_versionNonecudnnundefinedcxx_compiler_version12numpy1.21python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cuda_compilerNonecuda_compiler_versionNonecudnnundefinedcxx_compiler_version12numpy1.21python3.8.____cpython.yaml
@@ -20,6 +20,8 @@ cxx_compiler_version:
 - '12'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
+flatbuffers:
+- 23.5.26
 giflib:
 - '5.2'
 icu:
