saved_model_cli --help exits with -1

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -266,7 +266,8 @@ outputs:
         - cat test_tensorflow.py     # [unix]
         - python test_tensorflow.py  # [build_platform == target_platform]
         - tf_upgrade_v2 --help       # [build_platform == target_platform]
-        - saved_model_cli --help     # [build_platform == target_platform]
+        # --help exits with exit code 1
+        - test -f $PREFIX/bin/saved_model_cli  # [build_platform == target_platform]
         - tflite_convert --help      # [not win and build_platform == target_platform]
         - toco_from_protos --help    # [not win and build_platform == target_platform]
         - toco --help                # [not win and build_platform == target_platform]
