--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = "2.13.0" %}
-{% set estimator_version = "2.12.0" %}
 
 package:
   name: tensorflow-split
@@ -16,15 +15,14 @@ source:
       - patches/0005-Add-missing-any_invocable-target-to-absel-bazel.patch
       - patches/0006-Fix-missing-abseil-linkages.patch
 
-  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
-    sha256: 86c75e830c6ba762d0e3cf04c160096930fb12a992e69b3f24674b9f58902063
+  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
+    sha256: 4175e9276a1eb8b5e4e876d228e4605871832e7bd8517965d6a47f1481af2c3e
     folder: tensorflow-estimator
 
 build:
   number: 0
   skip: true  # [win]
   skip: true  # [python_impl == 'pypy']
-  skip: true  # [cuda_compiler_version in ("10.2", "11.0", "11.1")]
 
 requirements:
   build:
@@ -85,9 +83,6 @@ requirements:
     - dill
     - giflib
     - libgrpc
-    # 2022/04/25 hmaarrfk
-    # the latest flatbuffers 2.0.6 seems to have removed a sybmol in a patch release...
-    # https://github.com/Qengineering/TensorFlow_Lite_Pose_RPi_64-bits/issues/3#issuecomment-1034799822
     - flatbuffers
     - icu
     - libjpeg-turbo
@@ -105,18 +100,17 @@ requirements:
     - gast >=0.2.1,<=0.4.0
     - google-pasta >=0.1.1
     - h5py >=2.9.0
-    - keras-preprocessing >=1.1.1
     - numpy
     - opt_einsum >=2.3.2
-    - protobuf >=3.9.2
+    - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
     - python-flatbuffers >=2
     - six >=1.12
     - termcolor >=1.1.0
     - typing_extensions >=3.6.6,<4.6.0
     - wrapt >=1.11.0
     # TF-API needs to move in sync
-    - tensorboard >=2.12,<2.13
-    - keras >=2.12,<2.13
+    - tensorboard >=2.13,<2.14
+    - keras >=2.13,<2.14
 
 outputs:
   # 2021/12/29: hmaarrfk
@@ -183,18 +177,17 @@ outputs:
         - gast >=0.2.1,<=0.4.0
         - google-pasta >=0.1.1
         - h5py >=2.9.0
-        - keras-preprocessing >=1.1.1
         - numpy
         - opt_einsum >=2.3.2
-        - protobuf >=3.9.2
+        - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
         - python-flatbuffers >=2
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6,<4.6.0
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.12,<2.13
-        - keras >=2.12,<2.13
+        - tensorboard >=2.13,<2.14
+        - keras >=2.13,<2.14
       run:
         - python
         - packaging
@@ -204,19 +197,17 @@ outputs:
         - google-pasta >=0.1.1
         - grpcio {{ libgrpc }}.*
         - h5py >=2.9.0
-        - jax >=0.3.15
-        - keras-preprocessing >=1.1.1
         - {{ pin_compatible('numpy', lower_bound='1.22') }}
         - opt_einsum >=2.3.2
-        - protobuf >=3.9.2
+        - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
         - python-flatbuffers >=2
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6,<4.6.0
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.12,<2.13
-        - keras >=2.12,<2.13
+        - tensorboard >=2.13,<2.14
+        - keras >=2.13,<2.14
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda  # [cuda_compiler_version != "None"]
         - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
