--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -121,11 +121,11 @@ outputs:
   # circularity is broken upstream by the fact that they have to bootstrap
   # their builds
   - name: tensorflow-base
-    script: build_pkg.sh  # [not win]
+    script: build_pkg.sh   # [unix]
     script: build_pkg.bat  # [win]
     build:
       string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
-      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
+      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                # [cuda_compiler_version == "None"]
       # weigh down cpu implementation and give cuda preference
       track_features:
         - tensorflow-cpu          # [cuda_compiler_version == "None"]
@@ -143,7 +143,7 @@ outputs:
       build:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
-        - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
+        - {{ compiler('cuda') }}              # [cuda_compiler_version != "None"]
         - python                              # [build_platform != target_platform]
         - cross-python_{{ target_platform }}  # [build_platform != target_platform]
       host:
@@ -211,7 +211,7 @@ outputs:
         - tensorboard >=2.13,<2.14
         - keras >=2.13,<2.14
         # avoid that people without GPUs needlessly download ~0.5-1GB
-        - __cuda  # [cuda_compiler_version != "None"]
+        - __cuda                                                  # [cuda_compiler_version != "None"]
         - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
     # TODO: decide on the name of the package
     # run_constrained:
@@ -225,7 +225,7 @@ outputs:
   - name: tensorflow
     build:
       string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
-      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
+      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                # [cuda_compiler_version == "None"]
       # weigh down cpu implementation and give cuda preference
       track_features:
         - tensorflow-cpu          # [cuda_compiler_version == "None"]
@@ -254,16 +254,16 @@ outputs:
         - tf_upgrade_v2 --help       # [build_platform == target_platform]
         # --help exits with exit code 1
         - test -x $PREFIX/bin/saved_model_cli  # [unix]
-        - tflite_convert --help      # [not win and build_platform == target_platform]
-        - toco_from_protos --help    # [not win and build_platform == target_platform]
-        - toco --help                # [not win and build_platform == target_platform]
+        - tflite_convert --help      # [build_platform == target_platform]
+        - toco_from_protos --help    # [build_platform == target_platform]
+        - toco --help                # [build_platform == target_platform]
 
   - name: tensorflow-estimator
-    script: build_estimator.sh   # [not win]
+    script: build_estimator.sh   # [unix]
     script: build_estimator.bat  # [win]
     build:
       string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
-      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
+      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                # [cuda_compiler_version == "None"]
     requirements:
       build:
         - {{ compiler('c') }}
@@ -271,7 +271,7 @@ outputs:
         # Keep the cuda compiler here since it helps package solvers
         # decide on the cuda variant
         # https://github.com/conda-forge/tensorflow-feedstock/issues/162
-        - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
+        - {{ compiler('cuda') }}                   # [cuda_compiler_version != "None"]
         - bazel >=5.2.0,<6
         - python                                   # [build_platform != target_platform]
         - cross-python_{{ target_platform }}       # [build_platform != target_platform]
@@ -304,7 +304,7 @@ outputs:
     build:
       skip: true  # [win]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
-      string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
+      string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                # [cuda_compiler_version == "None"]
       run_exports:
         # tensorflow makes no ABI guarantees, need to pin to what we built with
         - libtensorflow {{ version }}
@@ -341,15 +341,15 @@ outputs:
       requires:
         - {{ compiler('c') }}
       commands:
-        - test -f $PREFIX/lib/libtensorflow${SHLIB_EXT}  # [not win and cuda_compiler_version == "None"]
-        - ./test_libtensorflow.sh                        # [not win and cuda_compiler_version == "None" and build_platform == target_platform]
+        - test -f $PREFIX/lib/libtensorflow${SHLIB_EXT}  # [cuda_compiler_version == "None"]
+        - ./test_libtensorflow.sh                        # [cuda_compiler_version == "None" and build_platform == target_platform]
 
   - name: libtensorflow_cc
     script: cp_libtensorflow_cc.sh
     build:
       skip: true  # [win]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
-      string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
+      string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                # [cuda_compiler_version == "None"]
       run_exports:
         # tensorflow makes no ABI guarantees, need to pin to what we built with
         - libtensorflow_cc {{ version }}
@@ -398,7 +398,7 @@ outputs:
   - name: {{ tensorflow_cpu_gpu }}
     build:
       string: cuda{{ cuda_compiler_version | replace('.', '') }}py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
-      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                      # [cuda_compiler_version == "None"]
+      string: cpu_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                # [cuda_compiler_version == "None"]
       detect_binary_files_with_prefix: false
     requirements:
       run:
