--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,9 @@ source:
       - patches/0006-Fix-missing-abseil-linkages.patch
       # backport https://github.com/tensorflow/tensorflow/pull/61134
       - patches/0007-unpin-gast-dependency-for-pip_package.patch
+      - patches/0008-Use-basename-instead-of-realpath.patch
+      - patches/0009-Fix-protobuf_python-for-systemlibs.patch
+      - patches/0010-Add-absl_log-systemlib.patch
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
     sha256: 4175e9276a1eb8b5e4e876d228e4605871832e7bd8517965d6a47f1481af2c3e
@@ -90,6 +93,7 @@ requirements:
     - libjpeg-turbo
     - libpng
     - libprotobuf
+    - libprotobuf-python-headers
     - openssl
     - pybind11
     - sqlite
@@ -168,6 +172,7 @@ outputs:
         - libcurl
         - libpng
         - libprotobuf
+        - libprotobuf-python-headers
         - openssl
         - pybind11
         - snappy
