--- a/.ci_support/linux_64_c_compiler_version10cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10numpy1.22python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10numpy1.22python3.10.____cpython.yaml
@@ -1,21 +1,25 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.13'
-MACOSX_SDK_VERSION:
-- '10.13'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '15'
+- '10'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
 cuda_compiler_version:
-- None
+- '11.2'
+cudnn:
+- '8'
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '15'
+- '10'
+docker_image:
+- quay.io/condaforge/linux-anvil-cuda:11.2
 flatbuffers:
 - 23.5.26
 giflib:
@@ -27,17 +31,17 @@ libabseil:
 libcurl:
 - '8'
 libgrpc:
-- '1.54'
+- '1.56'
 libjpeg_turbo:
 - 2.1.5
 libpng:
 - '1.6'
 libprotobuf:
-- '3.21'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+- 4.23.3
+nccl:
+- '2'
 numpy:
-- '1.23'
+- '1.22'
 openssl:
 - '3'
 pin_run_as_build:
@@ -45,7 +49,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.11.* *_cpython
+- 3.10.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -53,10 +57,14 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+  - cuda_compiler
+  - cuda_compiler_version
+  - cdt_name
+  - docker_image
 - - libgrpc
   - libprotobuf
 - - python
