--- a/.ci_support/linux_64_c_compiler_version10cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10numpy1.23python3.11.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10numpy1.23python3.11.____cpython.yaml
@@ -1,47 +1,47 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '12'
+- '10'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cuda_compiler:
-- None
+- nvcc
 cuda_compiler_version:
-- None
+- '11.2'
 cudnn:
-- undefined
+- '8'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '12'
+- '10'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-cuda:11.2
 flatbuffers:
 - 23.5.26
 giflib:
 - '5.2'
 icu:
-- '72'
+- '73'
 libabseil:
 - '20230125'
 libcurl:
 - '8'
 libgrpc:
-- '1.54'
+- '1.56'
 libjpeg_turbo:
 - 2.1.5
 libpng:
 - '1.6'
 libprotobuf:
-- '3.21'
+- 4.23.3
 nccl:
 - '2'
 numpy:
-- '1.21'
+- '1.23'
 openssl:
 - '3'
 pin_run_as_build:
@@ -49,7 +49,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.10.* *_cpython
+- 3.11.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -61,7 +61,6 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-  - cudnn
   - cuda_compiler
   - cuda_compiler_version
   - cdt_name
