--- a/.ci_support/linux_64_c_compiler_version12cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12numpy1.22python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12numpy1.22python3.9.____cpython.yaml
@@ -1,47 +1,47 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '12'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cuda_compiler:
-- nvcc
+- None
 cuda_compiler_version:
-- '11.2'
+- None
 cudnn:
 - '8'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 flatbuffers:
 - 23.5.26
 giflib:
 - '5.2'
 icu:
-- '72'
+- '73'
 libabseil:
 - '20230125'
 libcurl:
 - '8'
 libgrpc:
-- '1.54'
+- '1.56'
 libjpeg_turbo:
 - 2.1.5
 libpng:
 - '1.6'
 libprotobuf:
-- '3.21'
+- 4.23.3
 nccl:
 - '2'
 numpy:
-- '1.21'
+- '1.22'
 openssl:
 - '3'
 pin_run_as_build:
@@ -61,7 +61,6 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-  - cudnn
   - cuda_compiler
   - cuda_compiler_version
   - cdt_name
