--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -5,3 +5,11 @@ MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
   - "10.13"                # [osx and x86_64]
 MACOSX_SDK_VERSION:        # [osx and x86_64]
   - "10.13"                # [osx and x86_64]
+
+# Hold back for icu73 migration
+# https://github.com/conda-forge/tensorflow-feedstock/pull/337
+libprotobuf:
+- '3.21'
+
+libgrpc:
+- '1.54'
