--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -10,6 +10,7 @@ MACOSX_SDK_VERSION:        # [osx and x86_64]
 # https://github.com/conda-forge/tensorflow-feedstock/pull/337
 libprotobuf:
 - '3.21'
-
+libabseil:
+- '20230125'
 libgrpc:
 - '1.54'
