Apply a lot of patching

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,14 +19,18 @@ source:
       - patches/0008-Add-absl_log-systemlib.patch
       - patches/0009-Omit-linking-to-layout_proto_cc-if-protobuf-linkage-.patch
       - patches/0010-Fix-further-abseil-linkage.patch
-      - patches/0001-Add-constraint-to-pybind11-systemlib.patch
-      - patches/0002-Different-file-ending-for-flatbuffers-LICENSE.patch
-      - patches/0003-Use-correct-hermetic-python.patch
-      - patches/0004-Add-python-runtimes-as-static-deps.patch
+      - patches/0011-Add-constraint-to-pybind11-systemlib.patch
+      - patches/0012-Different-file-ending-for-flatbuffers-LICENSE.patch
+      - patches/0013-Use-correct-hermetic-python.patch
+      - patches/0014-Add-python-runtimes-as-static-deps.patch
+      - patches/0015-Fix-ml_dtypes-linkage.patch
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 622797bf5311f239c2b123364fa360868ae97d16b678413e5e0633241f7d7d5c
     folder: tensorflow-estimator
+  - url: https://raw.githubusercontent.com/jax-ml/ml_dtypes/v0.2.0/ml_dtypes/include/float8.h
+    fn: float8.h
+    sha256: 7c3d32809adf01e1568434760bf3c347d0ef21d5fc4c5009815a5dd54635ed25
 
 build:
   number: 0
@@ -111,6 +115,7 @@ requirements:
     - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
     - google-pasta >=0.1.1
     - h5py >=2.9.0
+    - ml_dtypes 0.2.0
     - numpy
     - opt_einsum >=2.3.2
     - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
@@ -189,6 +194,7 @@ outputs:
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
         - google-pasta >=0.1.1
         - h5py >=2.9.0
+        - ml_dtypes 0.2.0
         - numpy
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
@@ -209,6 +215,7 @@ outputs:
         - google-pasta >=0.1.1
         - grpcio {{ libgrpc }}.*
         - h5py >=2.9.0
+        - ml_dtypes 0.2.0
         - {{ pin_compatible('numpy', lower_bound='1.22') }}
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
