--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -119,14 +119,14 @@ requirements:
     - numpy
     - opt_einsum >=2.3.2
     - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
-    - python-flatbuffers >=2
+    - python-flatbuffers >=23.5.26
     - six >=1.12
     - termcolor >=1.1.0
-    - typing_extensions >=3.6.6,<4.6.0
-    - wrapt >=1.11.0
+    - typing_extensions >=3.6.6
+    - wrapt >=1.11.0,<1.15
     # TF-API needs to move in sync
-    - tensorboard >=2.13,<2.14
-    - keras >=2.13,<2.14
+    - tensorboard >=2.14,<2.15
+    - keras >=2.14,<2.15
 
 outputs:
   # 2021/12/29: hmaarrfk
@@ -198,14 +198,14 @@ outputs:
         - numpy
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
-        - python-flatbuffers >=2
+        - python-flatbuffers >=23.5.26
         - six >=1.12
         - termcolor >=1.1.0
-        - typing_extensions >=3.6.6,<4.6.0
-        - wrapt >=1.11.0
+        - typing_extensions >=3.6.6
+        - wrapt >=1.11.0,<1.15
         # TF-API needs to move in sync
-        - tensorboard >=2.13,<2.14
-        - keras >=2.13,<2.14
+        - tensorboard >=2.14,<2.15
+        - keras >=2.14,<2.15
       run:
         - python
         - packaging
@@ -219,14 +219,14 @@ outputs:
         - {{ pin_compatible('numpy', lower_bound='1.22') }}
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
-        - python-flatbuffers >=2
+        - python-flatbuffers >=23.5.26
         - six >=1.12
         - termcolor >=1.1.0
-        - typing_extensions >=3.6.6,<4.6.0
-        - wrapt >=1.11.0
+        - typing_extensions >=3.6.6
+        - wrapt >=1.11.0,<1.15
         # TF-API needs to move in sync
-        - tensorboard >=2.13,<2.14
-        - keras >=2.13,<2.14
+        - tensorboard >=2.14,<2.15
+        - keras >=2.14,<2.15
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda                                                  # [cuda_compiler_version != "None"]
         - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
