--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "2.14.0" %}
-{% set estimator_version = "2.14.0" %}
+{% set version = "2.15.0" %}
+{% set estimator_version = "2.15.0" %}
 
 package:
   name: tensorflow-split
@@ -7,26 +7,22 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
-    sha256: ce357fd0728f0d1b0831d1653f475591662ec5bca736a94ff789e6b1944df19f
+    sha256: 9cec5acb0ecf2d47b16891f8bc5bc6fbfdffe1700bdadc0d9ebe27ea34f0c220
     patches:
       - patches/0001-loosen-requirements.patch
-      - patches/0002-fix-genproto.patch
-      - patches/0003-Add-additional-absl_synchronization-linkage-to-gRPC.patch
-      - patches/0004-Add-missing-any_invocable-target-to-absel-bazel.patch
-      - patches/0005-Fix-missing-abseil-linkages.patch
-      - patches/0006-Use-basename-instead-of-realpath.patch
-      - patches/0007-Fix-protobuf_python-for-systemlibs.patch
-      - patches/0008-Add-absl_log-systemlib.patch
-      - patches/0009-Omit-linking-to-layout_proto_cc-if-protobuf-linkage-.patch
-      - patches/0010-Fix-further-abseil-linkage.patch
-      - patches/0011-Add-constraint-to-pybind11-systemlib.patch
-      - patches/0012-Different-file-ending-for-flatbuffers-LICENSE.patch
-      - patches/0013-Use-correct-hermetic-python.patch
-      - patches/0014-Add-python-runtimes-as-static-deps.patch
-      - patches/0015-Fix-ml_dtypes-linkage.patch
-
+      - patches/0002-Add-additional-absl_synchronization-linkage-to-gRPC.patch
+      - patches/0003-Add-missing-any_invocable-target-to-absel-bazel.patch
+      - patches/0004-Fix-missing-abseil-linkages.patch
+      - patches/0005-Fix-protobuf_python-for-systemlibs.patch
+      - patches/0006-Add-absl_log-systemlib.patch
+      - patches/0007-Omit-linking-to-layout_proto_cc-if-protobuf-linkage-.patch
+      - patches/0008-Fix-further-abseil-linkage.patch
+      - patches/0009-Add-constraint-to-pybind11-systemlib.patch
+      - patches/0010-Different-file-ending-for-flatbuffers-LICENSE.patch
+      - patches/0011-Use-correct-hermetic-python.patch
+      - patches/0012-Add-well_known_types_py_pb2-to-protobuf-systemlib.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
-    sha256: 622797bf5311f239c2b123364fa360868ae97d16b678413e5e0633241f7d7d5c
+    sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
   - url: https://raw.githubusercontent.com/jax-ml/ml_dtypes/v0.2.0/ml_dtypes/include/float8.h
     fn: float8.h
@@ -59,7 +55,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-    - bazel >=5.2.0,<6
+    - bazel 6.1.2
     - libgrpc
     - libprotobuf
     - nasm
@@ -127,8 +123,8 @@ requirements:
     - typing_extensions >=3.6.6
     - wrapt >=1.11.0,<1.15
     # TF-API needs to move in sync
-    - tensorboard >=2.14,<2.15
-    - keras >=2.14,<2.15
+    - tensorboard >=2.15,<2.16
+    - keras >=2.15,<2.16
 
 outputs:
   # 2021/12/29: hmaarrfk
@@ -206,8 +202,8 @@ outputs:
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0,<1.15
         # TF-API needs to move in sync
-        - tensorboard >=2.14,<2.15
-        - keras >=2.14,<2.15
+        - tensorboard >=2.15,<2.16
+        - keras >=2.15,<2.16
       run:
         - python
         - packaging
@@ -227,8 +223,8 @@ outputs:
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0,<1.15
         # TF-API needs to move in sync
-        - tensorboard >=2.14,<2.15
-        - keras >=2.14,<2.15
+        - tensorboard >=2.15,<2.16
+        - keras >=2.15,<2.16
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda                                                  # [cuda_compiler_version != "None"]
         - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
@@ -291,7 +287,7 @@ outputs:
         # decide on the cuda variant
         # https://github.com/conda-forge/tensorflow-feedstock/issues/162
         - {{ compiler('cuda') }}                   # [cuda_compiler_version != "None"]
-        - bazel >=5.2.0,<6
+        - bazel 6.1.2
         - python                                   # [build_platform != target_platform]
         - cross-python_{{ target_platform }}       # [build_platform != target_platform]
         - libabseil                                # [build_platform != target_platform]
