Further build fixes

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,8 @@ source:
       - patches/0011-Different-file-ending-for-flatbuffers-LICENSE.patch
       - patches/0012-Use-correct-hermetic-python.patch
       - patches/0013-Add-ducc-to-static_deps.patch
+      - patches/0001-Add-protobuf-toolchain.patch
+      - patches/0001-Add-another-wrapt-hash.patch
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 622797bf5311f239c2b123364fa360868ae97d16b678413e5e0633241f7d7d5c
@@ -57,7 +59,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-    - bazel >=5.2.0,<6
+    - bazel 6.1
     - libgrpc
     - libprotobuf
     - nasm
@@ -289,7 +291,7 @@ outputs:
         # decide on the cuda variant
         # https://github.com/conda-forge/tensorflow-feedstock/issues/162
         - {{ compiler('cuda') }}                   # [cuda_compiler_version != "None"]
-        - bazel >=5.2.0,<6
+        - bazel 6.1
         - python                                   # [build_platform != target_platform]
         - cross-python_{{ target_platform }}       # [build_platform != target_platform]
         - libabseil                                # [build_platform != target_platform]
