Add cuda120 migration

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -78,6 +78,16 @@ requirements:
     # GPU requirements for CUDA
     - cudnn      # [cuda_compiler_version != "None"]
     - nccl       # [cuda_compiler_version != "None"]
+    - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
+    - cuda-cupti-dev    # [(cuda_compiler_version or "").startswith("12")]
+    - cuda-cudart-dev   # [(cuda_compiler_version or "").startswith("12")]
+    - cuda-nvml-dev     # [(cuda_compiler_version or "").startswith("12")]
+    - cuda-nvtx-dev     # [(cuda_compiler_version or "").startswith("12")]
+    - libcublas-dev     # [(cuda_compiler_version or "").startswith("12")]
+    - libcusolver-dev   # [(cuda_compiler_version or "").startswith("12")]
+    - libcurand-dev     # [(cuda_compiler_version or "").startswith("12")]
+    - libcufft-dev      # [(cuda_compiler_version or "").startswith("12")]
+    - libcusparse-dev   # [(cuda_compiler_version or "").startswith("12")]
     # conda build requirements
     - python
     - pip
@@ -172,6 +182,16 @@ outputs:
         # GPU reuqirements
         - cudnn                   # [cuda_compiler_version != "None"]
         - nccl                    # [cuda_compiler_version != "None"]
+        - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
+        - cuda-cupti-dev    # [(cuda_compiler_version or "").startswith("12")]
+        - cuda-cudart-dev   # [(cuda_compiler_version or "").startswith("12")]
+        - cuda-nvml-dev     # [(cuda_compiler_version or "").startswith("12")]
+        - cuda-nvtx-dev     # [(cuda_compiler_version or "").startswith("12")]
+        - libcublas-dev     # [(cuda_compiler_version or "").startswith("12")]
+        - libcusolver-dev   # [(cuda_compiler_version or "").startswith("12")]
+        - libcurand-dev     # [(cuda_compiler_version or "").startswith("12")]
+        - libcufft-dev      # [(cuda_compiler_version or "").startswith("12")]
+        - libcusparse-dev   # [(cuda_compiler_version or "").startswith("12")]
         # conda build requirements
         - python
         - pip
@@ -264,6 +284,7 @@ outputs:
         - {{ pin_subpackage('tensorflow-estimator', exact=True) }}
         # avoid that people without GPUs needlessly download ~0.5-1GB
         # This also helps mamba give preference to the CPU build
+        - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
         - __cuda  # [cuda_compiler_version != "None"]
     test:
       files:
@@ -315,6 +336,9 @@ outputs:
         # https://github.com/conda-forge/conda-forge.github.io/issues/1528
         - openssl
         - {{ pin_subpackage('tensorflow-base', exact=True) }}
+        # Keep the cuda version here since it helps package solvers
+        # decide on the cuda variant
+        - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
       run:
         - python
         - {{ pin_subpackage('tensorflow-base', exact=True) }}
