--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -12,3 +12,4 @@ github:
   branch_name: main
   tooling_branch_name: main
 test: native_and_emulated
+conda_build_tool: "conda-build+conda-libmamba-solver"
