--- a/.ci_support/linux_64_c_compiler_version12cuda_compiler_version12.0cxx_compiler_version12numpy1.22python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cuda_compiler_version12.0cxx_compiler_version12numpy1.22python3.10.____cpython.yaml
@@ -51,7 +51,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.10.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -60,6 +60,8 @@ sqlite:
 - '3'
 target_platform:
 - linux-64
+tensorflow:
+- '2.14'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
