--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,6 +47,8 @@ build:
   skip: true  # [python_impl == 'pypy']
   skip: true  # [py<39]
   skip: true  # [cuda_compiler_version == "11.2"]
+  # The following skip can be removed when the absl::StrFormat build issues are fixed.
+  skip: true  # [cuda_compiler_version == "11.8"]
 
 requirements:
   build:
