Update a few patches

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,29 +9,30 @@ source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
     sha256: c729e56efc945c6df08efe5c9f5b8b89329c7c91b8f40ad2bb3e13900bd4876d
     patches:
-      - patches/0001-loosen-requirements.patch
+      - patches/0001-Loosen-requirements.patch
       - patches/0002-Add-additional-absl_synchronization-linkage-to-gRPC.patch
-      - patches/0003-Add-missing-any_invocable-target-to-absel-bazel.patch
-      - patches/0004-Fix-missing-abseil-linkages.patch
+      - patches/0003-Fix-missing-abseil-linkages.patch
+      - patches/0004-Add-absl_log-systemlib.patch
       - patches/0005-Fix-protobuf_python-for-systemlibs.patch
-      - patches/0006-Add-absl_log-systemlib.patch
-      - patches/0007-Omit-linking-to-layout_proto_cc-if-protobuf-linkage-.patch
-      - patches/0008-Fix-further-abseil-linkage.patch
-      - patches/0009-Add-constraint-to-pybind11-systemlib.patch
-      - patches/0010-Different-file-ending-for-flatbuffers-LICENSE.patch
-      - patches/0011-Use-correct-hermetic-python.patch
-      - patches/0012-Add-well_known_types_py_pb2-to-protobuf-systemlib.patch
-      - patches/0013-Add-protobuf-toolchain.patch
-      - patches/0014-fix-genproto.patch
-      - patches/0015-Remove-some-usage-of-absl-str_format-in-CUDA.patch  # [(cuda_compiler_version or "").startswith("11")]
-      - patches/0016-Patch-ml_dtype-to-make-constructor-unambiguous.patch
-      - patches/0017-Load-cuda_build_defs-from-tsl.patch
-      - patches/0018-Use-PYTHON-for-build-wheel.patch
-      - patches/0019-Always-use-Linux-sed-style.patch
-      - patches/0020-Adjust-relative-path-for-libdevice.patch  # [(cuda_compiler_version or "").startswith("12")]
-      - patches/0023-Fix-missing-includes-needed-for-Abseil-lts_2024_01_1.patch
-      - patches/0024-Link-to-absl_log_flags-instead-of-absl_flags.patch
-      - patches/0025-Update-ABSL-Log-Definition-for-libabsl_vlog_config_i.patch
+      - patches/0006-Omit-linking-to-layout_proto_cc-if-protobuf-linkage-.patch
+      - patches/0007-Fix-further-abseil-linkage.patch
+      - patches/0008-Add-constraint-to-pybind11-systemlib.patch
+      - patches/0009-Different-file-ending-for-flatbuffers-LICENSE.patch
+      - patches/0010-Use-correct-hermetic-python.patch
+      - patches/0011-Add-well_known_types_py_pb2-to-protobuf-systemlib.patch
+      - patches/0012-Add-protobuf-toolchain.patch
+      - patches/0013-fix-genproto.patch
+      - patches/0014-Remove-some-usage-of-absl-str_format-in-CUDA.patch
+      - patches/0015-Patch-ml_dtype-to-make-constructor-unambiguous.patch
+      - patches/0016-Use-PYTHON-for-build-wheel.patch
+      - patches/0017-Always-use-linux-sed-style.patch
+      - patches/0018-Adjust-relative-path-for-libdevice.patch
+      - patches/0019-Update-flatbuffers-static-assert.patch
+
+      # Not ported yet
+      # - patches/0023-Fix-missing-includes-needed-for-Abseil-lts_2024_01_1.patch
+      # - patches/0024-Link-to-absl_log_flags-instead-of-absl_flags.patch
+      # - patches/0025-Update-ABSL-Log-Definition-for-libabsl_vlog_config_i.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
@@ -45,7 +46,7 @@ source:
     sha256: b3a9970c3c6b169c41ac2fd4375f668d3fd1b492d48b912d89415fa1522a8f50
 
 build:
-  number: 4
+  number: 0
   skip: true  # [win]
   skip: true  # [python_impl == 'pypy']
   skip: true  # [py<39]
