--- a/.ci_support/osx_arm64_numpy1.22python3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_numpy1.22python3.9.____cpython.yaml
@@ -4,6 +4,10 @@ c_compiler:
 - clang
 c_compiler_version:
 - '16'
+c_stdlib:
+- macosx_deployment_target
+c_stdlib_version:
+- '11.0'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -15,7 +19,7 @@ cxx_compiler:
 cxx_compiler_version:
 - '16'
 flatbuffers:
-- 23.5.26
+- 24.3.25
 giflib:
 - '5.2'
 github_actions_labels:
@@ -23,17 +27,17 @@ github_actions_labels:
 icu:
 - '73'
 libabseil:
-- '20230802'
+- '20240116'
 libcurl:
 - '8'
 libgrpc:
-- '1.59'
+- '1.62'
 libjpeg_turbo:
 - '3'
 libpng:
 - '1.6'
 libprotobuf:
-- 4.24.4
+- 4.25.3
 macos_machine:
 - arm64-apple-darwin20.0.0
 numpy:
@@ -49,7 +53,7 @@ python:
 python_impl:
 - cpython
 snappy:
-- '1'
+- '1.1'
 sqlite:
 - '3'
 target_platform:
@@ -59,8 +63,6 @@ tensorflow:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-- - libgrpc
-  - libprotobuf
 - - python
   - numpy
   - python_impl
